--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -18,11 +18,11 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: cluster-1    # TODO: update to cluster name
-  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
+  GAR_LOCATION: europe-west1 # TODO: update region of the Artifact Registry
+  GKE_CLUSTER: gke-test    # TODO: update to cluster name
+  GKE_ZONE: europe-west1   # TODO: update to cluster zone
   DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
-  REPOSITORY: samples # TODO: update to Artifact Registry docker repository
+  REPOSITORY: test # TODO: update to Artifact Registry docker repository
   IMAGE: static-site
 
 jobs:
@@ -45,8 +45,8 @@ jobs:
       uses: 'google-github-actions/auth@v0'
       with:
         token_format: 'access_token'
-        workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-        service_account: 'my-service-account@my-project.iam.gserviceaccount.com'
+        workload_identity_provider: 'projects/681796430458/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+        service_account: 'my-gke@zeta-rush-363513.iam.gserviceaccount.com'
 
     # Alternative option - authentication via credentials json
     # - id: 'auth'
