--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -39,30 +39,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # Configure Workload Identity Federation and generate an access token.
-      - id: "auth"
-        name: "Authenticate to Google Cloud"
-        uses: "google-github-actions/auth@v0"
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
-          token_format: "access_token"
-          workload_identity_provider: "projects/681796430458/locations/global/workloadIdentityPools/my-pool/providers/my-provider"
-          service_account: "my-gke@zeta-rush-363513.iam.gserviceaccount.com"
-
-      # Alternative option - authentication via credentials json
-      # - id: 'auth'
-      #   uses: 'google-github-actions/auth@v0'
-      #   with:
-      #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-
-      - name: Docker configuration
-        run: |-
-          echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://$GAR_LOCATION-docker.pkg.dev
-      # Get the GKE credentials so we can deploy to the cluster
-      - name: Set up GKE credentials
-        uses: google-github-actions/get-gke-credentials@v0
-        with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          location: ${{ env.GKE_ZONE }}
+          GKE_CLUSTER: ${{ env.GKE_CLUSTER }}
+          GKE_ZONE: ${{ env.GKE_ZONE }}
 
       # Build the Docker image
       - name: Build
@@ -86,30 +67,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # Configure Workload Identity Federation and generate an access token.
-      - id: "auth"
-        name: "Authenticate to Google Cloud"
-        uses: "google-github-actions/auth@v0"
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
-          token_format: "access_token"
-          workload_identity_provider: "projects/681796430458/locations/global/workloadIdentityPools/my-pool/providers/my-provider"
-          service_account: "my-gke@zeta-rush-363513.iam.gserviceaccount.com"
-
-      # Alternative option - authentication via credentials json
-      # - id: 'auth'
-      #   uses: 'google-github-actions/auth@v0'
-      #   with:
-      #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-
-      - name: Docker configuration
-        run: |-
-          echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://$GAR_LOCATION-docker.pkg.dev
-      # Get the GKE credentials so we can deploy to the cluster
-      - name: Set up GKE credentials
-        uses: google-github-actions/get-gke-credentials@v0
-        with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          location: ${{ env.GKE_ZONE }}
+          GKE_CLUSTER: ${{ env.GKE_CLUSTER }}
+          GKE_ZONE: ${{ env.GKE_ZONE }}
+          
       - name: Publish
         run: |-
           docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
